plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.agilerunner'
version = '0.0.1-SNAPSHOT'
description = '함께 자라기를 돕는 코드 리뷰 봇'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/milestone" }
}

configurations.configureEach {
	resolutionStrategy {
		// 'github-api'가 1.11.0 버전을 요청하더라도,
		// GHSA-j288-q9x7-2f5v 취약점이 해결된 1.12.0 버전으로 강제 업그레이드합니다.
		force 'org.apache.commons:commons-text:1.12.0'
	}
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// AI
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6'

	// GitHub 연동
	implementation 'org.eclipse.jgit:org.eclipse.jgit:7.2.1.202505142326-r'
	implementation 'org.kohsuke:github-api:1.330'

	// 유틸리티
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.78'
	runtimeOnly 'com.h2database:h2'

	// 샌드박스 (리뷰이의 코드를 안전하게 실행하기 위함)
	implementation 'org.testcontainers:testcontainers:2.0.1'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
